@@ -20,22 +20,47 @@
 ; May be called from USR or SVC mode
 	NAME	__pthread_disable_ints
 |__pthread_disable_ints|
-	LDR	a1, =|__ul_global|
+	; For the shared library, if in SVC mode, assume v4 set by caller,
+	; otherwise call library function to find GOT pointer.
+ PICEQ "STMFD	sp!, {v4, lr}"
+ PICEQ "TEQ	a1, a1"
+ PICEQ "TEQ	pc, pc"
+ PICEQ "MRSEQ	a1, CPSR"
+ PICEQ "ANDNE	a1, pc, #3"
+ PICEQ "CMP	a1, #0"
+ PICEQ "BLEQ	__rt_load_pic"
+	LDR	a1, |.L0|	;=__ul_global
+ PICEQ "LDR	a1, [v4, a1]"
 	ADD	a1, a1, #GBL_PTH_WORKSEMAPHORE
 	MOV	a3, #1
 	SWP	a2, a3, [a1]
 	; From this point onwards we will not be interrupted by the callback
 	ADD	a2, a2, #1
 	STR	a2, [a1]
+ PICEQ "LDMFD	sp!, {v4, lr}"
 	MOV	pc, lr
+|.L0|
+	WORD	|__ul_global|
+	DECLARE_FUNCTION __pthread_disable_ints
 
 
 ; Decrement the semaphore, thus enabling context switches if it reaches 0
 ; May be called from USR or SVC mode
 	NAME	__pthread_enable_ints
 |__pthread_enable_ints|
-	LDR	a2, =|__ul_global|
+	; For the shared library, if in SVC mode, assume v4 set by caller,
+	; otherwise call library function to find GOT pointer.
+ PICEQ "STMFD	sp!, {v4, lr}"
+ PICEQ "TEQ	a1, a1"
+ PICEQ "TEQ	pc, pc"
+ PICEQ "MRSEQ	a1, CPSR"
+ PICEQ "ANDNE	a1, pc, #3"
+ PICEQ "CMP	a1, #0"
+ PICEQ "BLEQ	__rt_load_pic"
+	LDR	a2, |.L0|	;=__ul_global
+ PICEQ "LDR	a2, [v4, a2]"
 	LDR	a1, [a2, #GBL_PTH_WORKSEMAPHORE]
+ PICEQ "LDMFD	sp!, {v4, lr}"
 	[ __UNIXLIB_PARANOID > 0
 	CMP	a1, #0
 	ADRLE	a1, |semazero|
@@ -50,6 +75,7 @@
 	DCB	"__pthread_enable_ints called with semaphore already 0", 0
 	ALIGN
 	]
+	DECLARE_FUNCTION __pthread_enable_ints
 
 ; Similar to __pthread_disable_ints, but alters the caller's
 ; stack frame so __pthread_unprotect_unsafe is called
@@ -62,7 +88,13 @@
 	ADREQ	a1, |noframe|
 	BEQ	|__pthread_fatal_error|
 	]
-	LDR	a4, =|__ul_global|
+
+ PICEQ "STMFD	sp!, {v4, lr}"
+ PICEQ "BL	__rt_load_pic"
+
+	LDR	a4, |.L1|	;=__ul_global
+ PICEQ "LDR	a4, [v4, a4]"
+ PICEQ "LDMFD	sp!, {v4, lr}"
 	ADD	a1, a4, #GBL_PTH_WORKSEMAPHORE
 	MOV	a2, #1
 	SWP	a3, a2, [a1]
@@ -92,6 +124,8 @@
 	STR	a2, [fp, #-4]
 
 	MOV	pc, lr
+|.L1|
+	WORD	|__ul_global|
 
 	[ __UNIXLIB_PARANOID > 0
 |noframe|
@@ -101,13 +135,18 @@
 	DCB	"Return address is not empty in __pthread_protect_unsafe", 0
 	ALIGN
 	]
-
+	DECLARE_FUNCTION __pthread_protect_unsafe
 
 ; Similar to __pthread_enable_ints, but return to the saved __pthread_return_address
 ; Can corrupt a3-a4,ip,lr but NOT a1 or a2
 	NAME	__pthread_unprotect_unsafe
 |__pthread_unprotect_unsafe|
-	LDR	ip, =|__ul_global|
+ PICEQ "MOV	a3, v4"		; Save v4
+ PICEQ "BL	__rt_load_pic"
+
+	LDR	ip, |.L1|	;=__ul_global
+ PICEQ "LDR	ip, [v4, ip]"
+ PICEQ "MOV	v4, a3"		; Restore v4
 	LDR	lr, [ip, #GBL_PTH_RETURN_ADDRESS]
 	[ __UNIXLIB_PARANOID > 0
 	CMP	lr, #0
@@ -149,5 +188,6 @@
 	DCB	"Return address unset in __pthread_unprotect_unsafe", 0
 	ALIGN
 	]
+	DECLARE_FUNCTION __pthread_unprotect_unsafe
 
 	END
