@@ -1,3 +1,11 @@
+Sun Dec 03 16:36:08 2006  Lee Noar  <leenoar@ntlworld.com>
+
+	* source/pthread/_context.s: Add PIC instructions and declare
+	objects and functions for ELF DSO.
+	* source/pthread/_yield.s: Likewise.
+	* source/pthread/_ints.s: Likewise.
+	* source/pthread/_exit.s: Likewise.
+
 Wed Nov 29 22:58:55 CET 2006  John Tytgat  <John.Tytgat@aaug.net>
 
 	* source/clib/unixlib/buildoptions.h: Removed __UNIXLIB_MULL_SUPPORTED
